# cfb-data-tool

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py  main.py
app/config/: settings_store.py
app/config/presets/cfb26/: abilities.json  recruits.json
app/core/: calibration.py  capture.py  engine.py  processor.py  sound.py
app/core/ocr/: base.py  rapidocr_engine.py
app/core/profiles/: __init__.py  base.py  recruits.py
app/io/: output_csv.py  output_sqlite.py  store.py
app/platform/: __init__.py  detect.py  ui_theme.py
app/platform/capture/: __init__.py  crop.py  mss.py  portal.py  portal_dbus.py  protocol.py
app/platform/hotkey/: __init__.py  keyboard.py  noop.py  protocol.py
app/platform/sound/: __init__.py  linux.py  macos.py  protocol.py  windows.py
app/ui/: calibration_tab.py  capture_tab.py  data_tab.py  hotkey.py  main_window.py  settings_tab.py  update_checker.py  workers.py
app/ui/widgets/: hotkey_edit.py  result_card.py  roi_canvas.py  sound_picker.py
packaging/: AppRun  build.ps1  build_linux.sh  build_mac.sh  cfb-data-tool.desktop  cfbdatatool.spec  gen_icons.py  installer.iss  launch.py
tests/: debug_ocr.py  smoke_autocapture.py  smoke_calibration.py  smoke_data.py  smoke_ui.py  test_accuracy.py  test_portal_crop.py  test_portal_dbus.py  test_scaled_accuracy.py  test_smoke.py  test_star_scaling.py
