[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cfb-data-tool"
version = "0.1.0"
description = "Desktop tool to capture College Football data (recruits and more) from your screen via OCR + computer vision."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [{ name = "Tyler Patchoski" }]
dependencies = [
    "rapidocr-onnxruntime",
    "opencv-python",
    "numpy",
    "mss",
    "keyboard",
    "platformdirs",
]

[project.optional-dependencies]
ui = ["PySide6"]
sheets = ["gspread", "oauth2client"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["resources/*", "config/presets/**/*.json"]
